fix gap in dropdown that didnt allow for easy access to dropdown menu

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 10;
     color: black;
-    margin-top: 50px;
+    margin-top: 48px;
 }
 
     .dropdown-content a {
